--- a/package.json
+++ b/package.json
@@ -1,41 +1,48 @@
 {
   "name": "internet-archive-metadata-api",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "internet archive metadata api helper methods",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "tap ./test/*.test.js ./test/*/*.test.js --reporter spec",
-    "cover:browser": "npm test -- --coverage-report=lcov",
-    "cover:cli": "npm test -- --cov",
-    "cover:travis": "npm test -- --coverage-report=lcov --no-browser",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "eslint": "eslint ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dan-nl/internet-archive-metadata-api.git"
-  },
+  "author": "dan entous",
+  "license": "MIT",
+  "main": "src",
   "keywords": [
     "internet",
     "archive",
     "metadata api",
     "api"
   ],
-  "author": "dan entous",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dan-nl/internet-archive-metadata-api.git"
+  },
   "bugs": {
     "url": "https://github.com/dan-nl/internet-archive-metadata-api/issues"
   },
   "homepage": "https://github.com/dan-nl/internet-archive-metadata-api#readme",
+  "scripts": {
+    "cover:browser": "npm test -- --coverage-report=lcov",
+    "cover:cli": "npm test -- --cov",
+    "cover:travis": "npm test -- --coverage-report=lcov --no-browser",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "eslint": "eslint .",
+    "pre-commit": "echo 'pre-commit checks ...' && npm run eslint && npm test -- --cov",
+    "test": "tap ./test/*.test.js ./test/*/*.test.js --reporter spec"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run pre-commit"
+    }
+  },
   "devDependencies": {
-    "coveralls": "2.11.14",
-    "eslint": "3.8.1",
-    "eslint-config-dan-nl": "git://github.com/dan-nl/eslint-config-dan-nl.git",
-    "sinon": "1.17.6",
-    "tap": "7.1.2"
+    "coveralls": "3.0.0",
+    "eslint": "4.18.1",
+    "eslint-config-dan-nl": "0.1.3",
+    "ghooks": "2.0.2",
+    "sinon": "4.4.2",
+    "tap": "11.1.1"
   },
   "dependencies": {
-    "generic-request-options": "1.1.7",
-    "request-as-bluebird": "2.0.2"
+    "generic-request-options": "1.2.1",
+    "request-as-bluebird": "2.0.3"
   }
 }
