--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "internet-archive-metadata-api",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "internet archive metadata api helper methods",
   "author": "dan entous",
   "license": "MIT",
@@ -34,15 +34,15 @@
     }
   },
   "devDependencies": {
-    "coveralls": "3.0.0",
-    "eslint": "4.18.1",
-    "eslint-config-dan-nl": "0.1.3",
-    "ghooks": "2.0.2",
-    "sinon": "4.4.2",
-    "tap": "11.1.1"
+    "coveralls": "^3.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-dan-nl": "^0.1.5",
+    "ghooks": "^2.0.4",
+    "sinon": "^4.5.0",
+    "tap": "^12.0.1"
   },
   "dependencies": {
-    "generic-request-options": "1.2.1",
-    "request-as-bluebird": "2.0.3"
+    "generic-request-options": "^1.2.2",
+    "request-as-bluebird": "^2.0.4"
   }
 }
